Version 3.1 0.10cvs
 - Add set/show annotate. Add Emacs support for this
 - Dbg_set_trace -> Dbg_debugger more often

Version 3.1 0.09
2007-10-27

 - Add set/show trace-commands to make the same as gdb 6.6

 - show commands now allows for a starting number and +, same as gdb

 - Reduce assumption that undefined means '' - initialize more variables.
   Working towards inserting "set -u".

-  variable and tilde expansion now occurs in cd command. Note gdb
   does tilde expansion but not variable expansion like $HOME. 

-  add linetrace delay

-  make FreeBSD tests work, cygwin signals are working so test are run there

-  documentation updates

-  emacs code improved

-  some installation bugs fixed

-  file name was sometimes incorrectly reported when debugged script set IFS

Version 3.1 0.08
2007-1-20

 - Files coming from function line-specifications should be read in.
   Debian Bug #40336

 - add a gdb-like "load" command to force reading in a file.

 - negative numbers allowed in "frame" (and "up" and "down") commands. 
   In particular "frame -1" refers to the oldest frame.  Some
   refactoring of this code.

 - Note setting $PS4 in doc.

 - Help, manual-page and documentation fixes.

Version 3.1 0.07
2006-12-10

- Add gdb-like "signal" command

- Add "kill" command for those cases where "quit" doesn't work.

- Add mechanism to set up signal handlers so debugger is entered,
  or we just print the signal. 

- document how to do call line tracing from within a program, i.e.
  like the above signal handling setup, the debugger is not entered
  first.

- Allow an optional line-spec on "continue" debugger command.

- Add --enable-getopt option to disable GNU getopt for systems that have 
  non-GNU getopt like NetBSD

- Fix bug in tracking parameters $1, $2, etc

- Emacs interface bug fixes

- readarray builtin internal changes

- Document updates

- Make sure we don't complain about bash 3.2. This debugger works on both.

Version 3.1 0.06
2006-07-21
