@@ -1,4 +1,4 @@
-PKGDATADIR        = ${prefix}/share/bashdb/builtin
+pkgdatadir        = ${prefix}/share/bashdb/builtin
 bindir            = ${prefix}/share/bashdb/builtin
 if BUILD_BUILTINS
 pkgdata_DATA      = readarray set0
