@@ -1,6 +1,9 @@
 Version 3.1 0.10cvs
+ - Add builtin set0. Debugger will $0 (program name) if possible.
  - Add set/show annotate. Add Emacs support for this
  - Dbg_set_trace -> Dbg_debugger more often
+ - Start unit tests. 
+ - Lots of code cleanups.
 
 Version 3.1 0.09
 2007-10-27
@@ -608,4 +611,4 @@ occurred on line 1.) Also support for call stacks with source files
 and line numbers can be helpful for stand-alone debugging and error
 reporting
 
-$Id: NEWS,v 1.35 2007/10/30 11:46:29 rockyb Exp $
+$Id: NEWS,v 1.36 2008/07/13 20:38:29 rockyb Exp $
